--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projet2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Nico242001.github.io/projetSEG3525 ",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
