--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "custom-react-step-progress-bar": "^1.0.8",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
