--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-step-progress-bar": "^1.0.3",
     "reactstrap": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
